@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000  Donald N. Allingham
+# Copyright (C) 2000-2003  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,14 +18,14 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-"Names with the specified SoundEx code"
+"Names with SoundEx code of ..."
 
 import Filter
 import soundex
 from gettext import gettext as _
 
 class MatchSndEx2(Filter.Filter):
-    "Names with the specified SoundEx code"
+    "Names with SoundEx code of ..."
 
     def match(self,person):
         return self.text == soundex.soundex(person.getPrimaryName().getSurname())
@@ -36,6 +36,6 @@ class MatchSndEx2(Filter.Filter):
 #
 #------------------------------------------------------------------------
 Filter.register_filter(MatchSndEx2,
-                       description=_("Names with the specified SoundEx code"),
+                       description=_("Names with tSoundEx code of ..."),
                        label=_("SoundEx Code"),
                        qualifier=1)
