@@ -7,6 +7,9 @@
 	* src/gramps_main.py: Typo.
 	* src/PlaceView.py: Likewise.
 	* src/GenericFilter.py: Likewise.
+	* src/filters/MatchSndEx2.py: Make consistent use of ...
+	* src/filters/RegExMatch.py: Likewise.
+	* src/filters/SubString.py: Likewise.
 
 2003-09-29  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/gramps_main.py: fixed delete person problem.
